fix from purchased jump to rateUser

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -222,6 +222,13 @@ h6 {
   background-color: orange;
 }
 
+#accSettingAbove-img, #rateDriver-img{
+
+  height:55%;
+  width:55%;
+  padding:1px;
+  border: 2px solid grey;
+}
 
 #materialbox-overlay {
   display: none;
